--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ authors = [
     {name = "Щиголь Алексей",email = "hosglial@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0.0"
 dependencies = [
     "python-docx (>=1.2.0,<2.0.0)",
-    "ollama (>=0.6.1,<0.7.0)"
+    "ollama (>=0.6.1,<0.7.0)",
+    "langchain-text-splitters (>=1.0.0,<2.0.0)",
+    "qdrant-client (>=1.16.1,<2.0.0)"
 ]
 
 
