--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "qdrant-client (>=1.16.1,<2.0.0)",
     "uvicorn (>=0.38.0,<0.39.0)",
     "fastapi (>=0.122.0,<0.123.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "ragas (>=0.3.9,<0.4.0)"
 ]
 
 
