--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,15 @@ dependencies = [
     "python-docx (>=1.2.0,<2.0.0)",
     "ollama (>=0.6.1,<0.7.0)",
     "langchain-text-splitters (>=1.0.0,<2.0.0)",
+    "langchain-openai (>=0.2.0,<1.0.0)",
+    "langchain-core (>=1.1.0,<2.0.0)",
     "qdrant-client (>=1.16.1,<2.0.0)",
     "uvicorn (>=0.38.0,<0.39.0)",
     "fastapi (>=0.122.0,<0.123.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "ragas (>=0.3.9,<0.4.0)"
+    "ragas (>=0.3.9,<0.4.0)",
+    "pandas (>=2.0.0,<3.0.0)",
+    "rapidfuzz (>=3.14.3,<4.0.0)"
 ]
 
 
